Small hero styling update

--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -1,6 +1,8 @@
 <section id="home" class="flex justify-center mx-auto max-w-7xl w-11/12">
   <div class="flex flex-col">
-    <h1 class="lg:text-8xl text-5xl animate-fade animate-duration-[2000ms]">
+    <h1
+      class="lg:text-8xl text-5xl animate-fade animate-duration-[2000ms] text-center lg:text-start"
+    >
       Creating emotional<br />digital experiences <br />that people love
     </h1>
 
