Small styling update on work items

--- a/src/components/Work.astro
+++ b/src/components/Work.astro
@@ -13,7 +13,7 @@ import WorkItem from "./WorkItem.astro";
       title="Daily Power"
       href="https://www.dailypower.com.do/"
     >
-      <p>
+      <p class="max-w-xl">
         Technologies used: Next.js, Node.js, Javascript, Tailwind CSS,
         Contentful Headless CMS, OpenGraphQL, RESTful APIs.
       </p>
@@ -24,8 +24,8 @@ import WorkItem from "./WorkItem.astro";
       title="Lights and Media: Social Media Agency"
       href="https://www.lightsandmedia.agency/"
     >
-      <p>
-        Built with Next, Node.js, Typescript, CSS, <br /> HTML, Tailwind CSS, Instagram
+      <p class="max-w-xl">
+        Built with Next, Node.js, Typescript, CSS, HTML, Tailwind CSS, Instagram
         API.
       </p>
     </WorkItem>
@@ -36,7 +36,9 @@ import WorkItem from "./WorkItem.astro";
       desc=""
       href="https://uwdmultiservices.com/"
     >
-      <p>Built with: Astro, JavaScript, Node.js, Tailwind CSS, HTML, CSS.</p>
+      <p class="max-w-xl">
+        Built with: Astro, JavaScript, Node.js, Tailwind CSS, HTML, CSS.
+      </p>
     </WorkItem>
     <WorkItem
       img="./boxinglogo.webp"
@@ -44,7 +46,9 @@ import WorkItem from "./WorkItem.astro";
       title="Boxing Event III"
       href="https://boxingevent.netlify.app/"
     >
-      <p>Built with: Astro, JavaScript, Tailwind CSS, HTML, CSS</p>
+      <p class="max-w-xl">
+        Built with: Astro, JavaScript, Tailwind CSS, HTML, CSS
+      </p>
     </WorkItem>
   </div>
 </section>
