Hero description update

--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -36,7 +36,7 @@
 
       <div class="flex justify-center items-center mx-auto">
         <h2 class="text-lg lg:text-start text-center">
-          I'm a web developer with 2 years of experience, based in <br />
+          I'm a web developer with over 2 years of experience, based in <br />
           the Dominican Republic. I like to understand people to <br />solve
           their problems and create websites that resonate.
         </h2>
