Work item link change

--- a/src/components/Work.astro
+++ b/src/components/Work.astro
@@ -22,7 +22,7 @@ import WorkItem from "./WorkItem.astro";
       img="./lamlogo.webp"
       alt="Lights and Media"
       title="Lights and Media: Social Media Agency"
-      href="https://www.lightsandmedia.agency/"
+      href="https://lightsandmedia.netlify.app/"
     >
       <p class="max-w-xl">
         Built with Next, Node.js, Typescript, CSS, HTML, Tailwind CSS, Instagram
